# bootcamp-rl

./: .gitignore  README.md  pyproject.toml
configs/: debug_config.yaml  debug_image_based_embeddings_trained.yaml  debug_image_based_frozen.yaml  debug_states_only_config.yaml  ideal_debug_config.yaml  image_based_can_train.yaml  simple_sac_cheetah.yaml
configs/new_experiments/: states_only_assembly_1000_100k_pretrain.yaml  states_only_stack_three_1000_100k_pretrain.yaml
configs/sanity_checks/: image_based_frozen_can_200.yaml  image_based_frozen_square_200.yaml  states_only_can_50.yaml  states_only_square_200.yaml
configs/thesis_experiments/: new_lora_can_200_residual.yaml
csil/: configloader.py  dataloader.py  environment_wrappers.py  evaluation.py  loss_configs.py  main.py  networks.py  regression.py  sac.py  test_replay_buffer.py  utils.py
csil/misc/: analyze_dataset.py  convert_hdf5_dataset_to_lerobot.py  dashboard.py  embedding_similarity_in_episode.py  eval_during_pizero_training.py  fix_datasets.py  pyproject_for_pizero_project.toml  run_vla_eval.py  test_embedding_difference.py  test_mimicgen.py  tune_bc_hyperparams.py
csil/plots/: csil_validation.py  entropy_plots.py  image_based_csil_validation.py  metric_title.tex  partial_embedding_plots.py  plots_for_runs.py  plotting_utils.py  ppt_plots.py  vla_success_rate.py
csil/tests/: test_utils.py
csil/tools/: convert_robomimic_dataset_to_lerobot.py  eval_during_pizero_training.py  reward_unit_test.py  run_vla_eval.py  simulate_updates.py
